# auditdata-ai

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  auth.py  main.py  reporting.py  server.py
data_engine/: __init__.py  analyzer.py  charts.py
docs/: AI_IMPLEMENTATION_PLAN.md  PRESENTACION_SCRIPT.md  supabase_schema.sql
docs/architecture/: technical-architecture.md
docs/brand/: design-system.md
frontend/: index.html
frontend/src/: app.js  auth.js  router.js  state.js
frontend/src/styles/: design-system.css
samples/: moveup_sample.csv
tests/: test_analyzer.py  test_api.py
tests/frontend/: 01_page_load.spec.js  02_sample_analyze.spec.js  03_wizard_navigation.spec.js  04_cleaning_actions.spec.js  05_context_reset.spec.js  06_login_screen.spec.js
